[package]
name = "game"
version = "0.1.0"
authors = ["Joseph <wax818@gmail.com>"]

[dependencies]
gl = "0.6.0"
glm = "0.2.3"
lodepng = "2.0.0"
nalgebra = "0.13"
ncollide = "0.13"
nphysics3d = "0.7.2"
num-traits = "0.1"
sdl2 = "0.31.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
name = "game"
path = "src/lib/lib.rs"

[[bin]]
name = "game"
path = "src/bin/main.rs"
